--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ Icon
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+
+admin/csvgenerated/orderitemfile.csv
+admin/csvgenerated/productfile.csv
