--- a/app.yaml
+++ b/app.yaml
@@ -41,6 +41,12 @@ handlers:
 - url: /uploadsuccess/(.+)
   script: uploadsuccess/index.php  
   
+  - url: /servepublic
+  script: servepublic/index.php
+
+- url: /servepublic/(.+)
+  script: servepublic/index.php  
+  
 - url: /.*
   script: index.php  
   
